--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,7 +30,8 @@ Lint/SuppressedException:
   AllowComments: true
 
 # Reasonable line-length check; it's too easy for the cure to be worse than the disease
-Metrics/LineLength:
+#Metrics/LineLength:
+Layout/LineLength:
   Max: 150
 
 # Method length
