Adding directories for artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ data/incoming/processed/*
 
 # Build/test artifacts
 /artifacts/
+!/artifacts/.keep
+/artifacts/rubocop
+!/artifacts/rubocop/.keep
 
 /log/*
 !/log/.keep
