--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ data/incoming/processed/*
 # Build/test artifacts
 artifacts/*
 !/artifacts/.keep
+!artifacts/rspec
 !artifacts/rubocop
 artifacts/rubocop/*
 !/artifacts/rubocop/.keep
