--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 services:
-  gobi:
+  app:
     build: . 
     command: watch --interval 600 
-    image: containers.lib.berkeley.edu/lap/gobi/development:latest
     init: yes
     volumes:
       - ./:/opt/app:rw
